--- a/public/usage.html
+++ b/public/usage.html
@@ -297,7 +297,7 @@
         </div>
 
         <div style="text-align: center;">
-            <a href="javascript:window.close()" class="back-button">アプリに戻る</a>
+            <a href="/" class="back-button">アプリに戻る</a>
         </div>
     </div>
 </body>
