--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700&display=swap" rel="stylesheet">
     
-    <title>家族夕飯カレンダー</title>
+    <title>家族の夜ご飯スケジュール</title>
     
     <style>
       body {
